# Signatrust

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
config/: client.toml  server.toml
deploy/: deployment.yaml
migrations/: 20221220070859_initialize-table.down.sql  20221220070859_initialize-table.up.sql
proto/: signatrust.proto
src/: client_entrypoint.rs  control-server-entrypoint.rs  control_server_entrypoint.rs  data-server-entrypoint.rs  data_server_entrypoint.rs
src/application/: datakey.rs  user.rs
src/application/sign/: factory.rs  mod.rs
src/application/sign/memory/: service.rs
src/client/: sign_identity.rs
src/client/cmd/: add.rs  options.rs  traits.rs
src/client/file_handler/: checksum.rs  factory.rs  kernel_module.rs  mod.rs  rpm.rs  sequential_cursor.rs  traits.rs
src/client/load_balancer/: dns.rs  factory.rs  mod.rs  single.rs  traits.rs
src/client/worker/: assembler.rs  signer.rs  splitter.rs  traits.rs
src/domain/: encryption_engine.rs  encryptor.rs  kms_provider.rs  mod.rs  sign_plugin.rs  sign_service.rs
src/domain/clusterkey/: entity.rs
src/domain/datakey/: entity.rs  repository.rs
src/domain/token/: repository.rs
src/domain/user/: entity.rs  repository.rs
src/infra/: mod.rs
src/infra/cipher/: engine.rs
src/infra/cipher/algorithm/: aes.rs  factory.rs
src/infra/database/: pool.rs
src/infra/database/model/: mod.rs
src/infra/encryption/: engine.rs
src/infra/kms/: dummy.rs  factory.rs  huaweicloud.rs  kms_provider.rs  mod.rs
src/infra/sign/: mod.rs  openpgp.rs  signers.rs  traits.rs  x509.rs
src/infra/sign_backend/: factory.rs  mod.rs  sec_key.rs  traits.rs
src/infra/sign_plugin/: openpgp.rs  signers.rs  traits.rs  x509.rs
src/model/: mod.rs
src/model/clusterkey/: entity.rs  repository.rs
src/model/datakey/: entity.rs  repository.rs  traits.rs
src/model/token/: entity.rs
src/presentation/server/: control_server.rs  data_server.rs
src/server/: control_server.rs  data_server.rs  mod.rs
src/service/: grpc_service.rs
src/service/control_service/: datakey_service.rs  mod.rs  user_service.rs
src/service/data_service/: grpc_service.rs
src/util/: config.rs  error.rs  key.rs  mod.rs  signer_container.rs
(+19 files in other folders)
