[package]
name = "signatrust"
version = "0.1.0"
edition = "2021"
authors = ["TommyLike <tommylikehu@gmail.com"]
categories = ["rpm", "efi", "ko", "signature"]
description = """
Signatrust provides a safe and high throughput solution for signing linux packages&binaries in Rust.
"""
documentation = "https://github.com/tommylike/signatrust/#readme"
homepage = "https://github.com/tommylike/signatrust"
keywords = ["rpm", "efi", "ko", "signature"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/tommylike/signatrust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive", "env"] }
config = "0.13.3"
lazy_static = "1.4.0"
tonic = {version = "0.8.2", features = ["tls", "tls-roots"]}
prost = "0.11.0"
signal-hook = "0.3.14"
tokio-stream = "0.1.11"
tokio = {version = "1.21.2", features = ["rt-multi-thread", "fs"]}
log = "0.4.17"
async_once = "0.2.6"
async-trait = "0.1.60"
md-5 = "0.10.5"
notify = "5.0.0"
env_logger = "0.10.0"
thiserror = "1.0.38"
sqlx = { version = "0.6", features = ["migrate", "mysql", "runtime-tokio-rustls"] }
once_cell = "1.16.0"

[build-dependencies]
tonic-build = "0.8.4"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "data-server"
path = "src/data-server-entrypoint.rs"

[[bin]]
name = "control-server"
path = "src/control-server-entrypoint.rs"